argo/apps/immich/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  selector:
    app: immich-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
