argo/apps/immich/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  ports:
    - port: 5432
  clusterIP: None
  selector:
    app: immich-postgresql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgresql
  namespace: immich
spec:
  serviceName: immich-postgresql
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgresql
  template:
    metadata:
      labels:
        app: immich-postgresql
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: nfs-client
      resources:
        requests:
          storage: 20Gi
