argo/apps/immich/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: immich
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app.kubernetes.io/name: immich-redis-master
