argo/apps/immich/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis-master
  namespace: immich
spec:
  ports:
    - port: 6379
  selector:
    app: immich-redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-redis
  namespace: immich
spec:
  serviceName: immich-redis
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
      - name: redis
        image: redis:7
        args: ["redis-server", "/etc/redis/redis.conf"]
        ports:
          - containerPort: 6379
        volumeMounts:
          - name: redis-data
            mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: nfs-client
      resources:
        requests:
          storage: 5Gi
